[gd_scene load_steps=8 format=3 uid="uid://crdjlfgux2jt3"]

[ext_resource type="Script" path="res://character/character_portrait_view.gd" id="1_7mjef"]
[ext_resource type="Texture2D" uid="uid://bxtagprrai31x" path="res://assets/images/face_parts/beard_A1.png" id="2_hy8qe"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_sapyp"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_sysx3"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2ecpb"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bpgc4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7emgq"]

[node name="Character" type="AspectRatioContainer"]
offset_right = 72.0
offset_bottom = 72.0
script = ExtResource("1_7mjef")

[node name="BackHairTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("CompressedTexture2D_sapyp")

[node name="SkinTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("CompressedTexture2D_sysx3")

[node name="FrontHairTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("CompressedTexture2D_sapyp")

[node name="EyesTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("CompressedTexture2D_2ecpb")

[node name="MouthTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("CompressedTexture2D_bpgc4")

[node name="NoseTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("CompressedTexture2D_7emgq")

[node name="BeardTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_hy8qe")
